# Draftlang

./: .run  Cargo.toml  DRAFTLANG  README.md
asdf-util/: Cargo.toml
asdf-util/src/: commands.rs  lib.rs  main.rs  types.rs  util.rs
asdf-util/src/error/: mod.rs
draftlang-executor/: Cargo.toml  DRAFTLANG
draftlang-executor/src/: main.rs  util.rs
draftlang-executor/src/cli/: mod.rs
draftlang-executor/src/core/: mod.rs
draftlang-executor/src/core/string/: mod.rs  utils.rs
draftlang-executor/src/interpreter/: mod.rs  types.rs
draftlang-executor/src/types/: mod.rs
draftlang-executor/src/utils/: executor_utils.rs  for_loop.rs  helpers.rs  if_cond.rs  mod.rs
draftlang-parser/: Cargo.toml  DRAFTLANG
draftlang-parser/src/: json.rs  lib.rs  main.rs  script.rs  types.rs  util.rs
draftlang-parser/src/grammer/: draftlang.pest
error/: Cargo.toml
error/src/: lib.rs
src/: main.rs
