[workspace] 
members = [ "asdf-util","draftlang-executor", "draftlang-parser", "error"] 


[package]
name = "draftlang"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
color-print = "0.3.6"
serde_json = "1.0"
structopt = "0.3"